# ante

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  TODO.md  ante  build.rs  crates.nix  data.an  default.nix  expr.an  flake.nix  goldentests.toml  llc  rustfmt.toml  str.an  t.an  test  test.an  tmp  tmp.ll  tmp.s  todo.an  while  while.an
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ante-ls.yml  ante.yml  flake.yml  rust.yml
ante-ls/: Cargo.toml
ante-ls/src/: auto_import.rs  code_action.rs  completion.rs  definition.rs  diagnostics.rs  exports.rs  hover.rs  main.rs  util.rs
docs/: doxygen.cfg  index.html
docs/html/: annotated.html  args_8h_source.html  classante_1_1Lexer-members.html  classante_1_1Lexer.html  classes.html  classyy_1_1location-members.html  classyy_1_1location.html  classyy_1_1parser-members.html  classyy_1_1parser.html  classyy_1_1position-members.html  classyy_1_1position.html  classyy_1_1slice-members.html  classyy_1_1slice.html  classyy_1_1stack-members.html  classyy_1_1stack.html  compiler_8cpp.html  compiler_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  error_8h_source.html  files.html  function_8h_source.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  index.html  jitlinker_8h_source.html  lazystr_8h_source.html  lexer_8h_source.html  location_8hh_source.html  menudata.js  parser_8h_source.html  position_8hh_source.html  ptree_8h_source.html  stack_8hh_source.html  structArrayNode-members.html  (+121 more)
docs/latex/: annotated.tex  classante_1_1Lexer.tex  classyy_1_1location.tex  classyy_1_1parser.tex  classyy_1_1position.tex  classyy_1_1slice.tex  classyy_1_1stack.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  hierarchy.tex  refman.tex  structArrayNode.eps  structArrayNode.tex  structBinOpNode.eps  structBinOpNode.tex  structBlockNode.eps  structBlockNode.tex  structBoolLitNode.eps  structBoolLitNode.tex  structCharLitNode.eps  structCharLitNode.tex  structCtFunc.tex  structDataDeclNode.eps  structDataDeclNode.tex  structDataType.tex  structExtNode.eps  structExtNode.tex  structFltLitNode.eps  structFltLitNode.tex  structForNode.eps  structForNode.tex  structFuncDecl.tex  structFuncDeclNode.eps  structFuncDeclNode.tex  structGlobalNode.eps  structGlobalNode.tex  structIfNode.eps  structIfNode.tex  structImportNode.eps  (+76 more)
examples/: fifth.an  indent.an  match.an  math.an  parse_error.an  speedtest.an  type_decl.an
examples/codegen/: alias_patterns.an  array.an  auto_deref.an  bind_sugar.an  bitwise.an  break_continue.an  builtin.an  builtin_float.an  builtin_int.an  capture_by_ref.an  closure_basic.an  closure_nested.an  closure_return.an  compound_assignment.an  data.an  explicit_curry.an  fib.an  fib_stream.an  for_loop.an  function_call.an  hello  hello.an  implicit_import.an  implicit_only_call_with_unit.an  index_assign.an  infile_iter.an  int_string_cast.an  is.an  iter.an  logical.an  loop.an  loop_count.an  map.an  match_returns_union.an  method_calls.an  monomorphise_all  monomorphise_all.an  move_closure.an  mutability.an  operator_as_value.an  (+18 more)
examples/mir/: closure_conversion.an  tail_resume.an
examples/nameresolution/: ConflictingImport.an  Library.an  T.an  Trait.an  U.an  conflictingimport.an  effects.an  errors.an  export_unknown.an  functions.an  if.an  import.an  methods.an  named_constructor.an  not_declared_error.an  not_exported.an  or_pattern_mismatch.an  patterns.an  redeclare.an  type_decl.an  unused_local.an  unused_warning.an
examples/parser/: alias_pattern.an  apply_operators.an  array_length_overflow.an  basic.an  effects.an  escape_sequences.an  explicit_curry.an  export.an  hello.an  indent.an  inline_lambda_pipe.an  integer_bases.an  invalid_fieldless.an  invalid_integer_literal_suffix.an  irrefutable_pattern.an  loop.an  match.an  math.an  named_constructor.an  operators.an  parse_error.an  parser_recovery.an  semicolon_inference.an  spaces_in_tabs_only_file.an  string_interpolation.an  tabs.an  tabs_in_spaces_only_file.an  trailing_lambda_warning.an  (+3 more)
examples_failing/: 129_int_defaulting_generalization.an  141_recursive_closure.an  142_incorrect_defaulting.an  capture_by_ref.an
include/: antevalue.h  antype.h  anyvalue.h  args.h  argtuple.h  bignum.h  compapi.h  compiler.h  constraintfindingvisitor.h  declaration.h  error.h  expression.h  funcdecl.h  function.h  integralLib.h  interpreter.h  jit.h  jitlinker.h  lazystr.h  lexer.h  location.hh  module.h  moduletree.h  nameresolution.h  nodecl.h  nodevisitor.h  operations.h  parser.h  pattern.h  position.hh  ptree.h  repl.h  result.h  scanline.h  scopeguard.h  stack.h  stack.hh  substitutingvisitor.h  table.h  target.h  (+15 more)
old_tests/: compilerr.an  lexerr.an  syntaxerr.an
src/: ante.cpp  antevalue.cpp  antevisitor.cpp  antype.cpp  args.cpp  args.rs  argtuple.cpp  bignum.c  cli.rs  compapi.cpp  compiler.cpp  constraintfindingvisitor.cpp  dependencies.rs  error.cpp  expr.rs  expression.c  f16.an  files.rs  find_files.rs  frontend.rs  function.cpp  incremental.rs  integralLib.c  interpreter.c  interpreter.cpp  iterator_extensions.rs  jit.cpp  jitlinker.cpp  lazystr.cpp  lex.yy.c  lexer.c  lexer.cpp  lexer.rs  lib.rs  main.c  main.rs  manifest.rs  module.cpp  moduletree.cpp  nameresolution.cpp  (+33 more)
stdlib/: HashMap.an  String.an  StringBuilder.an  Vec.an  prelude.an  str.an  vec.an
tests/: ante_store.an  arrays  arrays.an  basicmacro.an  basictrait.an  castFunctions.an  casting.an  closures.an  compilerr.an  config.rs  ctstore.an  dataDecl.an  diff_printer.rs  elif  elif.an  enums.an  error.rs  example2.zy  example3.zy  example4.zy  example5.zy  exponent.py  exponent.zy  expr.an  exprblock  exprblock.an  exprif.an  fib  fib.an  floats  floats.an  fnDecl  fnDecl.an  fnDecl2.an  for.an  functionTypes.an  functional.an  globalint.an  golden_tests.rs  goldentests.rs  (+54 more)
(+416 files in other folders)
