[package]
name = "ante"
version = "0.1.1"
authors = ["Jake Fecher <jfecher11@gmail.com>"]
edition = "2021"
build = "build.rs"
rust-version = "1.81.0"

[lib]
name = "ante"

[workspace]
members = [ "ante-ls" ]

[dependencies]
aminicoro = { path = "./aminicoro" }
clap = { version = "4", features = ["derive"] }
colored = "2.0.0"
mimalloc = { version = "0.1.29", default-features = false }
difference = "2.0.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm18-1"], optional = true }
cranelift = "0.86.1"
cranelift-module = "0.86.1"
cranelift-jit = "0.86.1"
cranelift-object = "0.86.1"
target-lexicon = "0.12.4"
clap_complete = "4"
petgraph = "0.6.4"

[dev-dependencies]
goldentests = "1.3.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
debug = true

[features]
default = ["llvm"]
llvm = ["inkwell"]
