[package]
name = "ante"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "2.0.0"
deterministic-hash = "1.0.1"
inc-complete = "0.8.1"
petgraph = { version = "0.8.2", features = ["serde"] }
rayon = "1.10.0"
ron = "0.10.1"
rustc-hash = "2.1.1"
scc = { version = "2.3.4", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }

[dev-dependencies]
goldentests = { version = "1.4.1", default-features = false }

[profile.release]
debug = true
