[package]
name = "ante"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "2.0.0"
dashmap = "6.1.0"
deterministic-hash = "1.0.1"
inc-complete = "0.10.3"
inkwell = { version = "0.7.0", features = ["llvm21-1"] }
petgraph = { version = "0.8.2", features = ["serde"] }
rangemap = "1.6.0"
rayon = "1.10.0"
rmp-serde = "1.3"
rustc-hash = "2.1.1"
scc = { version = "2.3.4", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }

[dev-dependencies]
goldentests = { version = "1.4.1", default-features = false }

[profile.release]
debug = true
