[package]
name = "ante-ls"
version = "0.1.0"
edition = "2021"

[dependencies]
ante = { path = "..", default-features = false }
dashmap = "5.5.3"
env_logger = "0.10.2"
futures = "0.3.30"
im-rc = "15.1.0"
log = "0.4.20"
ropey = "1.6.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tower-lsp = "0.20.0"
